[package]
name = "spsc-ring"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Bounded, wait-free single-producer/single-consumer ring buffer"
repository = "https://github.com/groovg/spsc-ring"
readme = "README.md"
keywords = ["spsc", "lock-free", "queue", "ring-buffer", "low-latency"]
categories = ["concurrency", "data-structures"]

[lib]
name = "spsc_ring"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dev-dependencies]
criterion = "0.5"
rtrb = "0.3"
crossbeam-queue = "0.3"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency_rtt"
harness = false

[profile.bench]
lto = true
codegen-units = 1
